# computational-electronics-project

./: CMakeLists.txt  README.md
docs/: Doxyfile.in
lib/: poisson.cpp  poisson.hpp  solver.cpp  solver.hpp
lukastest/: CMakeLists.txt  hyper_cube.cpp  inputs.txt  main.cpp  poisson.cpp  poisson.hpp  test.txt
src/: VisualizationGUI.cpp  VisualizationWidget.hpp  VisualizationWindow.hpp  test.cpp
